--- a/final-api-ecomerce/src/main/resources/application.properties
+++ b/final-api-ecomerce/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+#JWT
+auth.jwt-secret=AMinhaSenh$eDificilPraCaramba4#2025@
+auth.jwt-expiration-miliseg=40000000
