Implementação de Token JWT e Autorizações

--- a/final-api-ecomerce/src/main/resources/application.properties
+++ b/final-api-ecomerce/src/main/resources/application.properties
@@ -28,5 +28,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 #JWT
-auth.jwt-secret=AMinhaSenh$eDificilPraCaramba4#2025@
+auth.jwt-secret=umasecretkeybemseguraeusavelongamesmo
 auth.jwt-expiration-miliseg=40000000
+
